syntax = "proto3";

package front.admin.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/front/admin/v1;v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "支付相关";
    version: "1.0";
  };
};

message UnifiedOrderReq {
  string businessId = 1;
  string amount = 2;
  string remarks = 3;
  string code = 4;
  string merId = 5;
  string payType = 6;
}

message UnifiedOrderResp {
  string appId = 1;
  string partnerId = 2;
  string prepayId = 3;
  string packageStr = 4;
  string nonceStr = 5;
  string timestamp = 6;
  string sign = 7;
  string mWebUrl = 8;
}

message H5UnifiedOrderResp {
  string nWebUrl = 1;
}

message OrderQueryReq {
  string businessId = 1;
  string merId = 2;
  string payType = 6;
}

message OrderQueryResp {
  string payMessage = 1;
  string payStatus = 2;
}

service Pay {
  rpc AppUnifiedOrder(UnifiedOrderReq) returns(UnifiedOrderResp){
    option (google.api.http) = {
      post: "/api/pay/wx/appUnifiedOrder"
      body: "*"
    };
  }
  rpc H5UnifiedOrder(UnifiedOrderReq) returns(H5UnifiedOrderResp){
    option (google.api.http) = {
      post: "/api/pay/wx/h5UnifiedOrder"
      body: "*"
    };
  }
  rpc JsUnifiedOrder(UnifiedOrderReq) returns(UnifiedOrderResp){
    option (google.api.http) = {
      post: "/api/pay/wx/jsUnifiedOrder"
      body: "*"
    };
  }

  rpc OrderQuery(OrderQueryReq) returns(OrderQueryResp){
    option (google.api.http) = {
      post: "/api/pay/wx/orderQuery"
      body: "*"
    };
  }
}
